--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,5 +2,7 @@
 <h1><%= t ".h1" %></h1>
 <p>
   <%= t ".p1" %>
-  <%= link_to t(".p2"),"http://www.railstutorial.org/contact" %>
+  <a href="http://www.railstutorial.org/contact">
+    <%= t ".p2" %>
+  </a>.
 </p>
