--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -2,13 +2,13 @@
 <h1><%= t(".h1") %></h1>
 <p>
   <%= t(".p1")%>
-  <%= link_to "http://www.railstutorial.org/help" do %>
-    <%= t(".p1")%>
+  <a href="http://www.railstutorial.org/help">
+    <%= t(".a1")%>
     <%= t(".p2")%>
-  <% end %>
-  <%= link_to "http://www.railstutorial.org/book" do %>
+  </a>
+  <a href="http://www.railstutorial.org/book">
     <em>
-      <%= t ".p3" %>
+      <%= t(".p3")%>  
     </em>
-  <% end %>
+  </a>
 </p>
